--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!--HttpClient 是 Apache Jakarta Common 下的子项目，用来提供高效的、最新的、功能丰富的支持 HTTP 协议的客户端编程工具包，并且它支持 HTTP 协议最新的版本和建议。-->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4.1</version>
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.6</version>
+			<version>1.2.47</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
