--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     host: 127.0.0.1
     port: 6379
     password:
-    timeout: 10000
+    timeout: 1000000
   datasource:
     url: jdbc:mysql://localhost:3306/ry_vue
     username: root
@@ -25,4 +25,6 @@ spring:
 #静态资源映射路径
   mvc:
     static-path-pattern: /**
+
+
 
