--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 			<version>1.1.0</version>
 		</dependency>
 
+		<!--添加Hystrix依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+			<version>2.0.2.RELEASE</version>
+		</dependency>
 
 
 		<dependency>
